[tool.poetry]
name = "api"
version = "0.1.0"
description = "YAD Tools backend"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
